# FitnessAppp-Backend

./: .env.example  .gitignore  .semgrepignore  CHANGELOG.md  README.md  alembic.ini  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: security.yml
alembic/: env.py
alembic/versions/: 20240101_initial_schema.py  20240201_add_notifications.py
app/: main.py
app/api/v1/: router.py
app/auth/: router.py  schemas.py  service.py
app/core/: base_model.py  celery_app.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  security.py
app/exercises/: models.py  router.py  schemas.py  service.py
app/gamification/: models.py  router.py  schemas.py  service.py
app/notifications/: __init__.py  models.py  push.py  router.py  schemas.py  service.py  tasks.py
app/programs/: models.py  router.py  schemas.py  service.py
app/progression/: engine.py  models.py  router.py  schemas.py  service.py
app/users/: models.py  router.py  schemas.py  service.py
app/workouts/: models.py  router.py  schemas.py  service.py
docker/: Dockerfile  Dockerfile.prod
monitoring/: loki.yml  prometheus.yml  promtail.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml  fitprogress-api.json
nginx/: nginx.conf
nginx/ssl/: .gitkeep
scripts/: seed_exercises.py  setup-monitoring-access.sh  setup-secrets.sh
tests/: conftest.py
tests/test_auth/: test_jwt.py
tests/test_gamification/: test_gamification.py
tests/test_progression/: test_engine.py
tests/test_workouts/: test_sessions.py
