[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fitprogress-backend"
version = "1.0.0"
description = "Production-ready FastAPI backend for FitProgress SaaS fitness progression app"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "python-jose[cryptography]==3.3.0",
    "httpx==0.27.0",
    "redis==5.0.4",
    "slowapi==0.1.9",
    "structlog==24.1.0",
    "python-multipart==0.0.9",
    "email-validator==2.1.1",
    "cryptography==42.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "aiosqlite==0.20.0",
    "black==24.4.2",
    "ruff==0.4.4",
    "mypy==1.10.0",
    "types-redis==4.6.0.20240425",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
]
ignore = [
    "ANN101",  # missing type for self
    "ANN102",  # missing type for cls
    "S101",    # use of assert (ok in tests)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "ANN", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
